--- a/pups-n-suds/app/views/layouts/application.html.erb
+++ b/pups-n-suds/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <header>
+      <h1>Pups 'n Suds Dog Grooming</h1>
+      <ul>
+        <li><a href="/users">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/rates">Rates</a></li>
+      </ul>
+    </header>
+
     <%= yield %>
   </body>
 </html>
