add materialize gem, import to application stylesheet

--- a/pups-n-suds/app/views/layouts/application.html.erb
+++ b/pups-n-suds/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <li><a href="/users">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/rates">Rates</a></li>
+        <li><a href="/rates">Book an Appointment</a></li>
       </ul>
     </header>
 
