--- a/pups-n-suds/app/views/layouts/application.html.erb
+++ b/pups-n-suds/app/views/layouts/application.html.erb
@@ -20,29 +20,30 @@
   <body>
     <header>
       <!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
+<!-- <ul id="dropdown1" class="dropdown-content">
   <li><a href="#!">one</a></li>
   <li><a href="#!">two</a></li>
   <li class="divider"></li>
   <li><a href="#!">three</a></li>
-</ul>
+</ul> -->
       <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-          <a id="logo-container" href="#" class="brand-logo">Pups 'n Suds Dog Grooming</a>
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo">Pups 'n Suds Dog Grooming</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/users">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/rates">Rates</a></li>
+          <li><a href="/rates">Book an Appointment</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/users">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/rates">Rates</a></li>
-        <li><a href="/rates">Book an Appointment</a></li>
-        <!-- Dropdown Trigger -->
-        <!-- <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li> -->
-      </ul>
-          <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Navbar Link</a></li>
-          </ul>
-          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="/users">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/rates">Rates</a></li>
+          <li><a href="/rates">Book an Appointment</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
       </nav>
     </header>
 
